--- a/ts-converter/package.json
+++ b/ts-converter/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.4",
     "@types/express": "^4.17.21",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
