--- a/ts-main/package.json
+++ b/ts-main/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -23,6 +24,7 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/http-proxy": "^1.17.14",
